Replace chapter listing with "Under Construction" message.

--- a/index.html
+++ b/index.html
@@ -2,24 +2,12 @@
 layout: page
 ---
 
-<div class="chapter-number">Chapter 1</div><div class="chapter-title">More With Less</div>
+<h1>Under Construction!</h1>
 
-<div class="button">
-  <span>Code Samples</span>
-</div>
+<p>We've been working so hard to get the book out that we haven't had time to work on the site! But don't worry, we'll have it finished soon!</p>
 
-<div class="chapter-number">Chapter 2</div><div class="chapter-title">Methods and Classes</div>
-<div class="chapter-number">Chapter 3</div><div class="chapter-title">Inheritance</div>
-<div class="chapter-number">Chapter 4</div><div class="chapter-title">Initializing Instances</div>
-<div class="chapter-number">Chapter 5</div><div class="chapter-title">Arrays and Blocks</div>
-<div class="chapter-number">Chapter 6</div><div class="chapter-title">Block Return Values</div>
-<div class="chapter-number">Chapter 7</div><div class="chapter-title">Hashes</div>
-<div class="chapter-number">Chapter 8</div><div class="chapter-title">References</div>
-<div class="chapter-number">Chapter 9</div><div class="chapter-title">Mixins</div>
-<div class="chapter-number">Chapter 10</div><div class="chapter-title">Comparable and Enumerable</div>
-<div class="chapter-number">Chapter 11</div><div class="chapter-title">Documentation</div>
-<div class="chapter-number">Chapter 12</div><div class="chapter-title">Exceptions</div>
-<div class="chapter-number">Chapter 13</div><div class="chapter-title">Unit Testing</div>
-<div class="chapter-number">Chapter 14</div><div class="chapter-title">Web Apps</div>
-<div class="chapter-number">Chapter 15</div><div class="chapter-title">Saving and Loading Data</div>
-<div class="chapter-number">Appendix</div><div class="chapter-title">What We Didn't Cover</div>
+<p>In the meantime, you can still download all of the code samples from the book!</p>
+
+<a class="button">
+  <span>Download Code Samples</span>
+</a>
