Be a little more apologetic.

--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@ layout: page
 
 <h1>Under Construction!</h1>
 
-<p>We've been working so hard to get the book out that we haven't had time to work on the site! But don't worry, we'll have it finished soon!</p>
+<p>Sorry, we've been working so hard to get the book out that we haven't had time to work on the site! But don't worry, we'll have it finished soon!</p>
