--- a/index.html
+++ b/index.html
@@ -2,12 +2,38 @@
 layout: page
 ---
 
-<h1>Under Construction!</h1>
+<div class="chapter">
+  <div class="heading">
+    <div class="chapter-number">Chapter 1</div>
+    <div class="title">More With Less</div>
+  </div>
+  <div class="buttons">
+    <div class="button">
+      <span>Code Samples</span>
+    </div>
+    <div class="button more-exercises">
+      <span>More Exercises</span>
+    </div>
+  </div>
+  <p>
+    You're wondering what this Ruby language is all about, and if it's right for you. Let us ask you this: Do you like being productive? Do you feel like all those extra compilers and libraries and class files and keystrokes in your other language bring you closer to a finished product, admiring coworkers, and happy customers? Would you like a language that takes care of the details for you? If you sometimes wish you could stop maintaining boilerplate code and get to work on your problem, then Ruby is for you. Ruby lets you get more done with less code.
+  </p>
+</div>
 
-<p>Sorry, we've been working so hard to get the book out that we haven't had time to work on the site! But don't worry, we'll have it finished soon!</p>
-
-<p>In the meantime, you can still download all of the code samples from the book!</p>
-
-<a href="head-first-ruby-all-code.zip" class="button">
-  <span>Download Code Samples</span>
-</a>
+<div class="chapter">
+  <span class="chapter-number">Chapter 2</span><span class="chapter-title">Methods and Classes</span>
+</div>
+<span class="chapter-number">Chapter 3</span><span class="chapter-title">Inheritance</span>
+<span class="chapter-number">Chapter 4</span><span class="chapter-title">Initializing Instances</span>
+<span class="chapter-number">Chapter 5</span><span class="chapter-title">Arrays and Blocks</span>
+<span class="chapter-number">Chapter 6</span><span class="chapter-title">Block Return Values</span>
+<span class="chapter-number">Chapter 7</span><span class="chapter-title">Hashes</span>
+<span class="chapter-number">Chapter 8</span><span class="chapter-title">References</span>
+<span class="chapter-number">Chapter 9</span><span class="chapter-title">Mixins</span>
+<span class="chapter-number">Chapter 10</span><span class="chapter-title">Comparable and Enumerable</span>
+<span class="chapter-number">Chapter 11</span><span class="chapter-title">Documentation</span>
+<span class="chapter-number">Chapter 12</span><span class="chapter-title">Exceptions</span>
+<span class="chapter-number">Chapter 13</span><span class="chapter-title">Unit Testing</span>
+<span class="chapter-number">Chapter 14</span><span class="chapter-title">Web Apps</span>
+<span class="chapter-number">Chapter 15</span><span class="chapter-title">Saving and Loading Data</span>
+<span class="chapter-number">Appendix</span><span class="chapter-title">What We Didn't Cover</span>
