Add 'Coming Soon' overlays.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ layout: page
     </div>
     <div class="button more-exercises">
       <span>More Exercises</span>
+      <div class="comingsoon"><br/>Coming Soon!</div>
     </div>
   </div>
   <p>
@@ -31,6 +32,7 @@ layout: page
     </div>
     <div class="button more-exercises">
       <span>More Exercises</span>
+      <div class="comingsoon"><br/>Coming Soon!</div>
     </div>
   </div>
   <p>
@@ -52,6 +54,7 @@ layout: page
     </div>
     <div class="button more-exercises">
       <span>More Exercises</span>
+      <div class="comingsoon"><br/>Coming Soon!</div>
     </div>
   </div>
   <p>
@@ -73,6 +76,7 @@ layout: page
     </div>
     <div class="button more-exercises">
       <span>More Exercises</span>
+      <div class="comingsoon"><br/>Coming Soon!</div>
     </div>
   </div>
   <p>
@@ -91,6 +95,7 @@ layout: page
     </div>
     <div class="button more-exercises">
       <span>More Exercises</span>
+      <div class="comingsoon"><br/>Coming Soon!</div>
     </div>
   </div>
   <p>
@@ -109,6 +114,7 @@ layout: page
     </div>
     <div class="button more-exercises">
       <span>More Exercises</span>
+      <div class="comingsoon"><br/>Coming Soon!</div>
     </div>
   </div>
   <p>
@@ -130,6 +136,7 @@ layout: page
     </div>
     <div class="button more-exercises">
       <span>More Exercises</span>
+      <div class="comingsoon"><br/>Coming Soon!</div>
     </div>
   </div>
   <p>
@@ -151,6 +158,7 @@ layout: page
     </div>
     <div class="button more-exercises">
       <span>More Exercises</span>
+      <div class="comingsoon"><br/>Coming Soon!</div>
     </div>
   </div>
   <p>
@@ -169,6 +177,7 @@ layout: page
     </div>
     <div class="button more-exercises">
       <span>More Exercises</span>
+      <div class="comingsoon"><br/>Coming Soon!</div>
     </div>
   </div>
   <p>
@@ -190,6 +199,7 @@ layout: page
     </div>
     <div class="button more-exercises">
       <span>More Exercises</span>
+      <div class="comingsoon"><br/>Coming Soon!</div>
     </div>
   </div>
   <p>
@@ -214,6 +224,7 @@ layout: page
     </div>
     <div class="button more-exercises">
       <span>More Exercises</span>
+      <div class="comingsoon"><br/>Coming Soon!</div>
     </div>
   </div>
   <p>
@@ -232,6 +243,7 @@ layout: page
     </div>
     <div class="button more-exercises">
       <span>More Exercises</span>
+      <div class="comingsoon"><br/>Coming Soon!</div>
     </div>
   </div>
   <p>
@@ -253,6 +265,7 @@ layout: page
     </div>
     <div class="button more-exercises">
       <span>More Exercises</span>
+      <div class="comingsoon"><br/>Coming Soon!</div>
     </div>
   </div>
   <p>
@@ -274,6 +287,7 @@ layout: page
     </div>
     <div class="button more-exercises">
       <span>More Exercises</span>
+      <div class="comingsoon"><br/>Coming Soon!</div>
     </div>
   </div>
   <p>
@@ -295,6 +309,7 @@ layout: page
     </div>
     <div class="button more-exercises">
       <span>More Exercises</span>
+      <div class="comingsoon"><br/>Coming Soon!</div>
     </div>
   </div>
   <p>
