--- a/index.html
+++ b/index.html
@@ -319,3 +319,22 @@ layout: page
     In this, our final chapter, we’ll prepare your app to save user submissions. We’ll show you how to set it up to accept form data. We’ll show you how to convert that data to Ruby objects, how to save those objects to a file, and how to retrieve the right object again when a user wants to see it. Are you ready? <em>Let’s finish this app</em>!
   </p>
 </div>
+
+<div class="chapter">
+  <div class="heading">
+    <div class="chapter-number">Appendix</div>
+    <div class="title">What We Didn’t Cover</div>
+  </div>
+  <div class="buttons">
+    <div class="button">
+      <span>Code Samples</span>
+    </div>
+    <div class="button more-exercises">
+      <span>More Exercises</span>
+      <div class="comingsoon"><br/>Coming Soon!</div>
+    </div>
+  </div>
+  <p>
+    We’ve covered a lot of ground, and you’re almost finished with this book. We’ll miss you, but before we let you go, we wouldn’t feel right about sending you out into the world without a <em>little</em> more preparation. We can’t possibly fit everything you’ll need to know about Ruby into these few pages... But we’ve kept all the best bits for this Top Ten appendix.
+  </p>
+</div>
