Switch Sinatra reference to <code> style.

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ layout: page
     This is the 21st century. Users want web apps. Ruby’s got you covered there, too! Libraries are available to help you host your own web applications and make them accessible from any web browser. So we’re going to spend these final two chapters of the book showing you how to build a full web app.
   </p>
   <p>
-    To get started, you’re going to need Sinatra, a third-party library for writing web applications. But don’t worry, we’ll show you how to use the RubyGems tool (included with Ruby) to <em>download and install libraries automatically</em>! Then we’ll show you just enough HTML to <em>create your own web pages</em>. And of course, we’ll show you how to serve those pages to a browser!
+    To get started, you’re going to need <code>Sinatra</code>, a third-party library for writing web applications. But don’t worry, we’ll show you how to use the RubyGems tool (included with Ruby) to <em>download and install libraries automatically</em>! Then we’ll show you just enough HTML to <em>create your own web pages</em>. And of course, we’ll show you how to serve those pages to a browser!
   </p>
 </div>
 
