Convert buttons to links.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ layout: page
     <div class="title">More With Less</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-ruby-ch01-code.zip" class="button">
       <span>Code Samples</span>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -27,9 +27,9 @@ layout: page
     <div class="title">Methods and Classes</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-ruby-ch02-code.zip" class="button">
       <span>Code Samples</span>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -49,9 +49,9 @@ layout: page
     <div class="title">Inheritance</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-ruby-ch03-code.zip" class="button">
       <span>Code Samples</span>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -71,9 +71,9 @@ layout: page
     <div class="title">Initializing Instances</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-ruby-ch04-code.zip" class="button">
       <span>Code Samples</span>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -90,9 +90,9 @@ layout: page
     <div class="title">Arrays and Blocks</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-ruby-ch05-code.zip" class="button">
       <span>Code Samples</span>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -109,9 +109,9 @@ layout: page
     <div class="title">Block Return Values</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-ruby-ch06-code.zip" class="button">
       <span>Code Samples</span>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -131,9 +131,9 @@ layout: page
     <div class="title">Hashes</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-ruby-ch07-code.zip" class="button">
       <span>Code Samples</span>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -153,9 +153,9 @@ layout: page
     <div class="title">References</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-ruby-ch08-code.zip" class="button">
       <span>Code Samples</span>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -172,9 +172,9 @@ layout: page
     <div class="title">Mixins</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-ruby-ch09-code.zip" class="button">
       <span>Code Samples</span>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -194,9 +194,9 @@ layout: page
     <div class="title">Comparable<br/>and Enumerable</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-ruby-ch10-code.zip" class="button">
       <span>Code Samples</span>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -219,9 +219,9 @@ layout: page
     <div class="title">Documentation</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-ruby-ch11-code.zip" class="button">
       <span>Code Samples</span>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -238,9 +238,9 @@ layout: page
     <div class="title">Exceptions</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-ruby-ch12-code.zip" class="button">
       <span>Code Samples</span>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -260,9 +260,9 @@ layout: page
     <div class="title">Unit Testing</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-ruby-ch13-code.zip" class="button">
       <span>Code Samples</span>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -282,9 +282,9 @@ layout: page
     <div class="title">Web Apps</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-ruby-ch14-code.zip" class="button">
       <span>Code Samples</span>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -304,9 +304,9 @@ layout: page
     <div class="title">Saving and<br/>Loading Data</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-ruby-ch15-code.zip" class="button">
       <span>Code Samples</span>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -326,9 +326,9 @@ layout: page
     <div class="title">What We Didn’t Cover</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-ruby-other-code.zip" class="button">
       <span>Code Samples</span>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
