--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@ layout: page
     <a href="source/head-first-ruby-ch01-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch01.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     You're wondering what this Ruby language is all about, and if it's right for you. Let us ask you this: <em>Do you like being productive</em>? Do you feel like all those extra compilers and libraries and class files and keystrokes in your other language bring you closer to a <em>finished product, admiring coworkers, and happy customers</em>? Would you like a language that <em>takes care of the details for you</em>? If you sometimes wish you could stop maintaining boilerplate code and get to work on your problem, then Ruby is for you. Ruby lets you <em>get more done with less code</em>.
