--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@ layout: page
     <a href="source/head-first-ruby-ch04-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch04.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     Every instance you create starts out as a clean slate. If you call certain instance methods before adding data, an error will be raised that will bring your whole program to a screeching halt. In this chapter, we’re going to show you a couple of ways to create objects that are safe to use right away. We’ll start with the <code>initialize</code> method, which lets you pass in a bunch of arguments to set up an object’s data <em>at the time you create it</em>. Then we’ll show you how to write <strong>class methods</strong>, which you can use to create and set up an object <em>even more easily</em>.
@@ -90,10 +89,9 @@ layout: page
     <a href="source/head-first-ruby-ch05-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch05.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     A whole lot of programming deals with lists of things. Lists of addresses. Lists of phone numbers. Lists of products. Matz, the creator of Ruby, knew this. So he worked <em>really hard</em> to make sure that working with lists in Ruby is <em>really easy</em>. First, he ensured that <strong>arrays</strong>, which keep track of lists in Ruby, have lots of <em>powerful methods</em> to do almost anything you might need with a list. Second, he realized that writing code to loop over a list to do something with each item, although tedious, is something developers were doing a lot. So he added <strong>blocks</strong> to the language, and removed the need for all that looping code. What is a block, exactly? Read on to find out...
