Add Chapter 6 exercises.

--- a/index.html
+++ b/index.html
@@ -107,10 +107,9 @@ layout: page
     <a href="source/head-first-ruby-ch06-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch06.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     Up until now, you've just seen methods handing data off to a block, and expecting the block to handle everything. But a block can also <em>return data</em> to the method. This feature lets the method get directions from the block, allowing it to <em>do more</em> of the work.
