Add Chapter 7 exercise.

--- a/index.html
+++ b/index.html
@@ -128,10 +128,9 @@ layout: page
     <a href="source/head-first-ruby-ch07-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch07.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     You’ve already seen how to create a collection of objects using an array. You’ve seen how to process each item in an array, and how to <em>find items you want</em>. In both cases, you start at the beginning of the array, and look through Every. Single. Object. You’ve also seen methods that take big collections of parameters. You’ve seen the problems this causes: method calls require a big, confusing collection of arguments that you have to remember the exact order for.
